mpi starting to works, libraires fixed in folder biblioteke